Add animation and transition styles for .horses. Add CSS styles for play_image img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             <div class="frame">
                 <img src="https://www.google.com/logos/2012/muybridge12-hp-v.png" />
             </div>
-            <!-- The image for the play button -->
+            <!-- The image for the play button
+            The sibling selector works in the forward direction only -->
             <span id="play_image">
                 <img src="http://www.google.co.in/logos/2012/muybridge12-hp-p.jpg" />
             </span>
