--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
             <div class="frame">
                 <img src="https://www.google.com/logos/2012/muybridge12-hp-v.png" />
             </div>
+
+            <!-- The play button now -->
+            <label for="play_button" id="play_label"></label>
+            <input type="checkbox" id="play_button" name="play_button" />
+
             <!-- The image for the play button
             The sibling selector works in the forward direction only -->
             <span id="play_image">
                 <img src="http://www.google.co.in/logos/2012/muybridge12-hp-p.jpg" />
             </span>
-
-            <!-- The play button now -->
-            <label for="play_button" id="play_label">ASD</label>
-            <input type="checkbox" id="play_button" name="play_button" />
 
             <div class="horse"></div>
             <div class="horse"></div>
